# CivicLedger

./: .ai-routing.local.yaml  .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  wrangler.jsonc
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  crud.py  database.py  download_source.py  intake.py  main.py  models.py  promote.py  schemas.py  seed.py
backend/migrations/: baseline_0001.sql  env.py
backend/tests/: test_api_contracts.py  test_asset_resolution_and_reactions.py  test_congress_sources.py  test_disclosure_acquisition_hardening.py  test_disclosure_ocr.py  test_disclosure_quality_pipeline.py  test_entity_history_model.py  test_entity_reference.py  test_event_ranking_benchmark.py  test_evidence_expansion.py  test_executive_disclosure_manifest.py  test_federal_events.py  test_fred_context.py  test_historical_news_and_sec.py  test_house_disclosures.py  test_house_historical_disclosures.py  test_house_ptr_transactions.py  test_judicial_disclosure_manifest.py  test_market_event_hardening.py  test_market_prices.py  test_official_event_involvement.py  test_pages_evidence_ranking.py  test_parsers.py  test_presidential_oge_parser.py  test_public_officials_dataset.py  test_public_release_contract.py  test_public_storage_planning.py  test_relationship_review_migration.py  test_relationship_review_workflow.py  test_release_accessibility.py  test_release_determinism.py  test_release_links_and_checksums.py  test_release_operations_tooling.py  test_release_performance.py  test_release_static_contract.py  (+5 more)
db/: init.sql
(+973 files in other folders)
