[project]
name = "civicledger-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dateutil>=2.9.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
